# HYDRA-ULTIMATE

./: CHANGELOG.md  README.md  bootstrap.sh  install-webpanel.sh  main.py  pyproject.toml  pytest.ini  requirements-webpanel.txt  verify.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: linux-integration-smoke.sh  release_notes.py
.github/workflows/: ci.yml  integration.yml  release.yml
docs/: RELEASING.md
hydra/: __init__.py  cli.py
hydra/core/: backup.py  doctor.py  nft.py  orchestrator.py  singbox.py  sni_router.py  source_transparency.py  state.py  status.py  systemd.py  upgrade.py
hydra/plugins/: base.py  registry.py
hydra/services/: sync_agent.py  traffic.py  traffic_daemon.py
hydra/ui/: diagnostics.py  menus.py  tui.py
hydra/utils/: commands.py  crypto.py  downloader.py  (+2 more)
tests/: conftest.py  test_anytls_plugin.py  test_awg_plugin.py  test_backup.py  test_cli.py  test_commands.py  test_diagnostics.py  test_dnscrypt_plugin.py  test_doctor_upgrade.py  test_fail2ban_plugin.py  test_honeypot_plugin.py  test_menu_logs.py  test_naive_plugin.py  test_orchestrator.py  test_shadowtls_plugin.py  test_singbox_update.py  test_sni_router.py  test_source_transparency.py  test_state.py  test_state_validation.py  test_status.py  test_subscriptions.py  test_sync_agent.py  test_traffic_accounting.py  test_traffic_daemon.py  test_trusttunnel_plugin.py  test_upgrade_240.py  test_utils.py  test_warp_clash_import.py  test_warp_plugin.py  test_warp_routing_catalog.py  test_wdtt_plugin.py  test_webpanel_auth.py  test_webpanel_handlers.py  test_webpanel_server.py
(+57 files in other folders)
